Upgrade to Spring Boot 4 with OpenRewrite
Also:
- do prleiminary check with automatic VS Code nukk analysis
- NormalizationService::normakizeInputPages replvae check on "" with isBlank()